2002-12-04  Sam Steingold  <sds@gnu.org>

	* defmacro.lisp (make-length-test): use EXT:LIST-LENGTH-DOTTED
	instead if LENGTH because the argument may be dotted when it comes
	from a destructuring lambda list

2002-12-03  Sam Steingold  <sds@gnu.org>

	* stream.d (MAKE-WINDOW): do not assume that *TERMINAL-IO* is a
	terminal-stream
	(FILE-POSITION): decrement the position if a character has been
	unread (so that PEEK-CHAR does not modify FILE-POSITION)

2002-12-02  Sam Steingold  <sds@gnu.org>

	* spvw_debug.d (nobject_out): handle characters

2002-12-02  Sam Steingold  <sds@gnu.org>

	* foreign1.lisp (finalize-coutput-file): produce ANSI C,
	compilable with a C++ compiler such as g++

2002-12-02  Sam Steingold  <sds@gnu.org>

	fixed bug #[ 647015 ]: ffi:def-c-enum broken from .fas file
	* foreign1.lisp (def-c-enum): use DEF-C-TYPE to define the enum
	type to C `int'

2002-12-02  Sam Steingold  <sds@gnu.org>

	* int2adic.d (D_D_mal2adic_D, UDS_UDS_durch2adic_UDS):
	avoid "warning: statement with no effect"
	* hashtabl.d (hashcode, CLASS-TUPLE-GETHASH): ditto

2002-12-01  Bruno Haible  <bruno@clisp.org>

	* spvw_debug.d (nobject_out): Fix compilation error when !DYNAMIC_FFI.

2002-12-01  Bruno Haible  <bruno@clisp.org>

	Make it buildable with CC=g++.

	* m4/proto.m4 (CL_PROTO_RET): Add an argument, the ANSI-DECL.
	* m4/abort.m4 (CL_ABORT): Update.
	* m4/closedir.m4 (CL_CLOSEDIR): Update.
	* m4/free.m4 (CL_FREE): Make it work better with CC=g++.
	* m4/getpagesize.m4 (CL_GETPAGESIZE): Update.
	* m4/putenv.m4 (CL_PUTENV): Avoid buggy AC_CHECK_FUNCS(putenv).
	* m4/select.m4 (RL_SELECT): Avoid buggy AC_CHECK_FUNCS(select).
	(CL_SELECT): Likewise.
	* m4/shmat.m4 (CL_SHMAT): Make it work better with CC=g++.
	* m4/signal.m4 (RL_RETSIGTYPE): Make it work better with CC=g++.
	* m4/strlen.m4 (CL_STRLEN): Make it work better with CC=g++.

	* cjk.h (is_cjk_encoding): Convert declaration to ANSI C.
	* uniname.c (unicode_name_word, unicode_name_word_lookup)